--- a/assets/css/thanks.css
+++ b/assets/css/thanks.css
@@ -24,10 +24,10 @@ body {
     border-radius: 15px;
 }
 h1 {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 4em;
     letter-spacing: 3px;
-    color: #5CC8D7FF;
+    color: #008c76ff;
     margin: 0;
     margin-bottom: 20px;
 }
@@ -35,11 +35,11 @@ h1 {
     margin: 0;
     font-size: 1.3em;
     color: #aaa;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     letter-spacing: 1px;
 }
 .go-home {
-    background: #5CC8D7FF;
+    background: #008c76ff;
     border: 2px solid #ffffff;
     color: #ffffff;
     font-weight: 600;
@@ -60,10 +60,10 @@ h1 {
 }
 .go-home:hover {
     background: transparent;
-    border-color: #5CC8D7FF;
+    border-color: #008c76ff;
 }
 a:hover .go-home {
-    color: #5CC8D7FF;
+    color: #008c76ff;
 }
 .go-home a {
     text-decoration: none;
@@ -80,7 +80,7 @@ a:hover .go-home {
     margin: 0;
     padding: 4px;
     color: #ffc107;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     letter-spacing: 1px;
 }
 .footer-like p a {
